Added get users
